Added a video to Frankenstein and changed text slightly.

--- a/index.html
+++ b/index.html
@@ -372,6 +372,9 @@
                                         <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
                                         <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
                                     </div>
+                                    <div class="portfolio-video embed-responsive embed-responsive-16by9">
+                                        <iframe class="rounded embed-responsive-item" src="https://www.youtube.com/embed/dESBk_H9zxg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    </div>
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/frankenstein-full.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
@@ -381,7 +384,7 @@
                                         to find.</p>
                                     <p style="font-style: italic;text-align: right;">-Sam Sax, How To Spell Reductive</p>
                                     <br/>
-                                    <p class="mb-5">Frankenstein is an interactive poem about Mary Shelley's novel of the same name. It was a personal project created in Winter 2019-2020.</p>
+                                    <p class="mb-5">Frankenstein is an interactive poem about Mary Shelley's novel of the same name created. It was a personal project created in Unity in Winter 2019-2020.</p>
                                     <p class="mb-5">The game can be downloaded on <a href="https://willsmartin.itch.io/frankenstein">itch</a>.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
