--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Ikigai is a narrative puzzle game about Oliver, an aspiring young artist who gets trapped in the world of a Japanese Ukiyo-e art piece. The player must switch between 2D and 3D perspectives to solve puzzles, explore the world, and navigate obstacles.</p>
                                     <p class="mb-5">Ikigai was my senior project and was completed by multiple teams of five programmers, seven artists/designers, a musician, and a journalist. As lead programmer, I worked closely with the artists and designers to assign deliverables. Aside from managing the programmers, I acted as a technical artist and puzzle developer; I implemented rendering features, such as post-processing and shaders, and implemented puzzle mechanics.</p>
+                                    <p class="mb-5">An example of one of the puzzles I programmed:</p>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/zodiac.gif" alt="" />
                                     <p class="mb-5">An example of the post-processing:</p>
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ikigai-post-processing-outline.png" alt="" />
                                     <p class="mb-5">More information can be found at our blog: <a href="https://www.placeholderdevs.com/">placeholderdevs.com</a></p>
